--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URI = mongodb+srv://arunsingh:arunsingh@cluster0.rey0d9q.mongodb.net/?retryWrites=true&w=majority
+BASE_URL= http://localhost:5500/
